--- a/src/app/Header.css
+++ b/src/app/Header.css
@@ -2,6 +2,7 @@
     top: 0;
     position: fixed;
     width: 100%;
+    z-index: 100;
     line-height: 1.6;
     border-bottom: 3px solid rgba(var(--main-color), 25%);
     background-color: white;
