--- a/src/index.css
+++ b/src/index.css
@@ -28,7 +28,7 @@ code {
 }
 
 .content {
-    padding: 5em 1.5em 1.5em;
+    padding: 5em 1.5em 7em;
     align-items: center;
     display: flex;
     justify-content: center;
